contrast issues fixed

--- a/optimise/style.css
+++ b/optimise/style.css
@@ -777,7 +777,7 @@ h4 {
 }
 
 .tc-white {
-  color: #ffffff !important;
+  color: #fff !important;
 }
 
 .btn-atomic-tangerine {
